--- a/css/menu.css
+++ b/css/menu.css
@@ -1,27 +1,43 @@
-#menu{
-    width: 100%;
-}
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300&display=swap');
 
-ul{
-    border: 1px solid black;
-    background-color: rgb(40 170 218);
-    border-radius: 5px;
-    height: 50px;
-    text-align: center;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    padding: 0;
+*{
+    font-family: 'Poppins', sans-serif;
     margin: 0;
+    padding: 0;
 }
 
-ul li{
-    display: inline;
-    margin: 0 10px;
+
+header{
+    background-color: rgb(15, 180, 51);
+    box-shadow: 0px 3px 10px rgb(25, 186, 189);
 }
 
-ul li a{
+.nav-bar{
+    display: flex;
+    justify-content: center;
+    padding: 1.5rem 6rem;
+}
+
+
+.nav-list{
+    display: flex;
+    align-items: center;
+}
+
+.nav-list ul{
+    display: flex;
+    justify-content: center;
+    list-style: none;
+}
+
+.nav-item{
+    margin: 0 15px;
+}
+
+.nav-link{
     text-decoration: none;
-    color: black;
-
+    font-size: 1.15rem;
+    color: #fff;
+    font-weight: 400;
 }
+
