--- a/css/gamificacao.css
+++ b/css/gamificacao.css
@@ -4,6 +4,50 @@
     background-repeat: no-repeat;
 }
 
+/*Estilização Menu*/
+*{
+    font-family: 'Poppins', sans-serif;
+    margin: 0;
+    padding: 0;
+}
+
+
+header{
+    background-color: rgb(15, 180, 51);
+    box-shadow: 0px 3px 10px rgb(25, 186, 189);
+}
+
+.nav-bar{
+    display: flex;
+    justify-content: center;
+    padding: 1.5rem 6rem;
+}
+
+
+.nav-list{
+    display: flex;
+    align-items: center;
+}
+
+.nav-list ul{
+    display: flex;
+    justify-content: center;
+    list-style: none;
+}
+
+.nav-item{
+    margin: 0 15px;
+}
+
+.nav-link{
+    text-decoration: none;
+    font-size: 1.15rem;
+    color: #fff;
+    font-weight: 400;
+}
+
+/*Estilização Menu*/
+
 /*Estilização Banho*/
 
 .paragrafo-banho{
@@ -97,7 +141,6 @@ label{
     justify-content: center;
 }
 
-/*Estilização Economizando seu bolso*/
 #custo{
     margin-top: 20px;
     margin-bottom: 8px;
