--- a/css/equipe.css
+++ b/css/equipe.css
@@ -1,9 +1,3 @@
-#container-principal{
-    background-image: url(../img/main\ background-image.jpg);
-    background-size: cover;
-    background-repeat: no-repeat; 
-}
-
 h1{
     padding: 20px;
     margin: 30px;
@@ -15,20 +9,11 @@ h1{
 
 }
 
-.paragrafo{
-    background-color: rgba(8, 151, 8, 0.719);
-    font-size: 18px;
-    font-family: 'Poppins';
-    color: #fff;
-    justify-content: center;
-    text-align: center;
-    margin:20px;
-    border-radius: 16px;
-}
-
 /*Estilização Menu*/
 *{
     font-family: 'Poppins', sans-serif;
+    margin: 0;
+    padding: 0;
 }
 
 
