--- a/css/gamificacao.css
+++ b/css/gamificacao.css
@@ -73,10 +73,10 @@ header{
 #banho{
     display: flex;
     text-align: center;
-    align-items: center center;
+    justify-content: center;
     width: 200px;
     height: 100px;
-    border: 3px solid rgb(111, 17, 154);
+    border: 3px solid black;
     border-radius: 10px;
     background-color: hsl(241, 89%, 33%);
     font-size: 20px;
@@ -84,14 +84,34 @@ header{
     font-weight: 600;
     margin: auto;
     padding: 11px;
+    margin-top: 50px;
+}
+
+#container-principal{
+    background-color: rgba(8, 151, 8, 0.719);
 }
 
 .container{
     margin-top: 10px;
-    background-color: rgba(8, 151, 8, 0.719);
-    border: 2px solid blue;
     color: #fff;
+}
 
+.p1{
+    text-align: left;
+    margin-left: 20px;
+    margin-top: 35px;
+}
+
+ul li{
+    align-items: center;
+    justify-content: center;
+}
+
+.foto-chuveiro{
+    height: 30%;
+    width: 30%;
+    border-radius: 18px;
+    margin-bottom: 20px;
 }
 
 /*Estilização Banho*/
@@ -108,7 +128,7 @@ h3{
 }
 
 #container-luz{
-    background-color:rgba(47, 79, 79, 0.632);
+    background-color: rgba(67, 65, 65, 0.792);
     margin: 0 20px;
     padding: 35px;
     height: 250px;
@@ -120,8 +140,18 @@ h3{
     font-size: 18px;
 }
 
+.paragrafo-luz{
+    background-color: rgba(8, 151, 8, 0.719);
+    text-align:center;
+    justify-content: center;
+    margin: 0 20px;
+    border-radius: 16px;
+    color: #fff;
+    font-size: 18px;
+}
+
 label{
-    font-size: 20px;
+    font-size: 30px;
     font-weight: 600;
 }
 
@@ -138,6 +168,12 @@ label{
     width: 130px;
 }
 
+.foto-luz{
+    border-radius: 15px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    height: 70%;
+}
 /*Estilização Luz*/
 
 /*Estilização Economizando seu bolso*/
