--- a/css/styles.css
+++ b/css/styles.css
@@ -17,7 +17,7 @@ h1{
     font-family: 'Raleway', sans-serif;
     color: green;
     font-size: 45px;
-
+    font-weight: 900;
 }
 
 /*Estilização Menu*/
