--- a/css/equipe.css
+++ b/css/equipe.css
@@ -2,7 +2,6 @@
     background-image: url(../img/main\ background-image.jpg);
     background-size: cover;
     background-repeat: no-repeat;
-    overflow: auto;
 }
 
 h1{
@@ -81,5 +80,22 @@ header{
     font-weight:800;
     text-align: center;
 }
-
 /*Estilização Cards*/
+
+/*Barra horizontal*/
+.barra-horizontal{
+    background-color:rgba(8, 151, 8, 0.719);
+    width: 100%;
+    height: 80px;
+    border: 1px solid black;
+}
+
+.barra-horizontal p{
+    font-size: 20px;
+    color:#fff;
+    font-family: 'Poppins';
+    justify-content: center;
+    text-align: center;
+    margin-top: 10px;
+}
+/*Barra horizontal*/
