--- a/css/quemsomos.css
+++ b/css/quemsomos.css
@@ -72,3 +72,22 @@ img{
     width: 30%;
     height: 50%;
 }
+
+/*Barra horizontal*/
+.barra-horizontal{
+    background-color:rgba(8, 151, 8, 0.719);
+    width: 100%;
+    height: 80px;
+    border: 1px solid black;
+}
+
+.barra-horizontal p{
+    font-size: 20px;
+    color:#fff;
+    font-family: 'Poppins';
+    justify-content: center;
+    text-align: center;
+    margin-top: 10px;
+}
+
+/*Barra horizontal*/
