--- a/css/contato.css
+++ b/css/contato.css
@@ -140,11 +140,12 @@ header{
 
 .barra-horizontal p{
     font-size: 20px;
-    color:#fff;
+    color:gold;
     font-family: 'Poppins';
     justify-content: center;
     text-align: center;
     margin-top: 10px;
+    font-weight: 500;
 }
 /*Barra horizontal*/
 
