--- a/css/gamificacao.css
+++ b/css/gamificacao.css
@@ -9,8 +9,8 @@ h1{
     margin: 30px;
     text-align: center;
     justify-content: center;
-    font-family: 'Raleway', sans-serif;
-    color: green;
+    font-family: 'Lucidatypewriter', sans-serif;
+    color: #ffeb00;
     font-size: 45px;
     font-weight: 900;
 }
