--- a/css/quemsomos.css
+++ b/css/quemsomos.css
@@ -1,7 +1,8 @@
 #container-principal{
-    background-image: url(../img/main\ background-image.jpg);
+    background-image: url(../img/canvas.jpg);
     background-size: cover;
-    background-repeat: no-repeat; 
+    background-repeat: no-repeat;
+    
 }
 
 h1{
@@ -9,8 +10,8 @@ h1{
     margin: 30px;
     text-align: center;
     justify-content: center;
-    font-family: 'Raleway', sans-serif;
-    color: green;
+    font-family: 'Lucidatypewriter', sans-serif;
+    color: #ffeb00;
     font-size: 45px;
     font-weight: 900;
 }
