--- a/css/quemsomos.css
+++ b/css/quemsomos.css
@@ -5,16 +5,15 @@
     
 }
 
-h1{
-    padding: 20px;
-    margin: 30px;
-    text-align: center;
-    justify-content: center;
-    font-family: 'Lucidatypewriter', sans-serif;
-    color: #ffeb00;
-    font-size: 45px;
-    font-weight: 900;
+#h3P {
+    font-size: 55px; 
+    color: gold;
+    font-weight: 400;
+    border-bottom: 1px solid black;
+    font-family: 'Lucidatypewriter';
+    
 }
+
 
 .paragrafo{
     background-color: rgba(8, 151, 8, 0.719);
@@ -25,7 +24,67 @@ h1{
     text-align: center;
     margin:20px;
     border-radius: 16px;
+    
 }
+
+.flex-container1 {
+    display: flex;
+    flex-wrap: nowrap;
+  }
+
+  .flex-container1 .box1 {
+    width: 50%;
+    margin: 30px;
+    text-align: justify;
+    
+  }
+
+  .flex-container2 {
+    display: flex;
+    flex-wrap: nowrap;
+  }
+
+  .flex-container2 .box2 {
+    width: 50%;
+    margin: 30px;
+    text-align: justify;
+
+  }
+
+  .box3 {
+    width: 50%;
+    margin: 30px;
+    text-align: justify;
+
+  }
+
+.div1 {
+    width: 80%;
+    height: 100px;
+    text-align: center;
+    margin-left: 100px;
+  }
+
+
+.div3 {
+    width: 600px;
+    height: 300px;
+    border: 1px solid blue;
+    
+  }
+
+h1{
+    padding: 20px;
+    margin: 30px;
+    text-align: center;
+    justify-content: center;
+    font-family: 'Lucidatypewriter';
+    color: #ffeb00;
+    font-size: 45px;
+    font-weight: 900;
+}
+
+
 
 /*Estilização Menu*/
 *{
@@ -80,7 +139,7 @@ header{
 
 .barra-horizontal p{
     font-size: 20px;
-    color:gold;
+    color:rgb(0, 0, 0);
     font-family: 'Poppins';
     justify-content: center;
     text-align: center;
@@ -89,3 +148,34 @@ header{
 }
 
 /*Barra horizontal*/
+
+/*Animação título*/
+.animate-charcter
+{
+   text-transform: uppercase;
+  background-image: linear-gradient(
+    -225deg,
+    #f8e008 0%,
+    #c1cc29 29%,
+    #c3cfc1 67%,
+    #f8e008 100%
+  );
+  background-size: auto auto;
+  background-clip: border-box;
+  background-size: 200% auto;
+  color: #fff;
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  animation: textclip 10s linear infinite;
+  border-radius: 500px;
+  display: inline-block;
+      font-size: 45px;
+}
+
+@keyframes textclip {
+  to {
+    background-position: 200% center;
+  }
+}
+/*Animação título*/
