--- a/css/video.css
+++ b/css/video.css
@@ -102,7 +102,7 @@ h1{
 
 .barra-horizontal p{
     font-size: 20px;
-    color:gold;
+    color:rgb(0, 0, 0);
     font-family: 'Poppins';
     justify-content: center;
     text-align: center;
