--- a/css/contato.css
+++ b/css/contato.css
@@ -140,7 +140,7 @@ header{
 
 .barra-horizontal p{
     font-size: 20px;
-    color:gold;
+    color:rgb(0, 0, 0);
     font-family: 'Poppins';
     justify-content: center;
     text-align: center;
