--- a/css/styles.css
+++ b/css/styles.css
@@ -36,7 +36,8 @@ header{
 .nav-bar{
     display: flex;
     justify-content: center;
-    padding: 1.5rem 6rem;
+    padding: 5px;
+    padding-top: 25px;
 }
 
 
