--- a/css/video.css
+++ b/css/video.css
@@ -20,7 +20,8 @@ header{
 .nav-bar{
     display: flex;
     justify-content: center;
-    padding: 1.5rem 6rem;
+    padding: 5px;
+    padding-top: 25px;
 }
 
 
