--- a/css/equipe.css
+++ b/css/equipe.css
@@ -9,7 +9,7 @@ h1{
     margin: 30px;
     text-align: center;
     justify-content: center;
-    font-family: 'Lucidatypewriter', sans-serif;
+    font-family: 'Lucidatypewriter';
     color: #ffeb00;
     font-size: 45px;
     font-weight: 900;
