--- a/css/gamificacao.css
+++ b/css/gamificacao.css
@@ -9,7 +9,7 @@ h1{
     margin: 30px;
     text-align: center;
     justify-content: center;
-    font-family: 'Lucidatypewriter', sans-serif;
+    font-family: 'Lucidatypewriter';
     color: #ffeb00;
     font-size: 45px;
     font-weight: 900;
@@ -92,7 +92,12 @@ header{
     margin-bottom: 40px;
   }
 
-
+  .div2 {
+    width: 80%;
+    height: 100px;
+    text-align: center;
+    margin-left: 100px;
+  }
 
 
 /*Estilização Banho*/
@@ -113,7 +118,7 @@ header{
     text-align: center;
     justify-content: center;
     width: 200px;
-    height: 100px;
+    height: 130px;
     border: 3px solid black;
     border-radius: 10px;
     background-color: hsl(241, 89%, 33%);
@@ -122,7 +127,7 @@ header{
     font-weight: 600;
     margin: auto;
     padding: 11px;
-    margin-top: 50px;
+    margin-top: 10px;
 }
 
 #container-principal{
@@ -169,13 +174,14 @@ h3{
     background-color: rgba(67, 65, 65, 0.792);
     margin: 0 20px;
     padding: 35px;
-    height: 250px;
+    height: 300px;
     color: white;
     text-align: center;
     justify-content: center; 
     border: solid 2px green;
     border-radius: 16px;
     font-size: 18px;
+
 }
 
 .paragrafo-luz{
@@ -257,6 +263,13 @@ label{
     font-weight: 500;
 }
 /*Barra horizontal*/
+
+
+#resposta{
+    margin-top: 10px;
+    margin-bottom: 60px
+}
+
 
 
 /*Animação título*/
